--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -18,18 +18,22 @@ header.nl-header
 		div.owl-carousel.main-carousel
 			div.item.nl-slides.nl-slide-1
 				div.container-fluid
-					h2 Draft your line up with NoLimitCoins
+					h2 Draft your line up with No Limit Coins
 					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
 			div.item.nl-slides.nl-slide-5
 				div.container-fluid.circle-JT
-					h2 Heads up Fantasy sports for charity
-					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+					div.row
+						div.col-9.offset-3
+							a.btn.btn-primary.btn-lg.nl-m-t-40(href="register.html") SIGN UP
+							h2 Heads up Fantasy sports for charity
 			div.item.nl-slides.nl-slide-6
-				div.container-fluid.circle-JT
-					//- h2 Win tickets to the Main Event of the WSOP vegas
-					//- div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
+				div.container-fluid.JC
+					div.row
+						div.col-9
+							a.btn.btn-primary.btn-lg.nl-m-t-40(href="register.html") SIGN UP
+							h2 Win a seat for $20K Sit & Go with Johhny Chan
 			div.item.nl-slides.nl-slide-3
 				div.container-fluid
-					h2 Daily Fantasy Soccer with NLC2
+					h2 Daily Fantasy Soccer with No Limit Coins
 					div.btn.btn-primary.btn-lg.nl-m-t-40 SIGN UP
 
