added good helmet on football create team page

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -959,7 +959,11 @@ section.nl-section.nl-players.nl-create-team
                             .col-12
                                 div.nl-team-card.table-data-field
                                     h3 team NLC2
-                                    <img src="assets/img/helmet.png" alt="helmet">
+                                    div.helmet-container
+                                        img#helmet.helmet-img(src='assets/img/helmet/white-helmet.png', style='display: block;')
+                                        div.oval-letter
+                                            img#oval.img-fluid.select-oval(src='assets/img/oval/grayoval.png', style='display: block;')
+                                            img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
                         .row
                             .col-12
