new field with post and gametime on homepage

--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -94,57 +94,75 @@ div.nl-section.nl-create-team.homepage-field
 										tr
 											td.indicated
 													span.played.indicator
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos FLEX
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos K
 											td 30
 											td $0
 										tr
 											td.indicated
 													span.playing.indicator
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos RB
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos RB
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos QB
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos WR
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos WR
 											td 30
 											td $0
 										tr
 											td.indicated
 													span.not-playing.indicator
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos TE
 											td 30
 											td $0
 										tr
 											td
-											td Player name
+											td
+												p Player name
+												p.gametime WAS-DAL 09.00 EST
 											td.pos DEF
 											td 30
 											td $0
